--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,6 +1,6 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
-#### [ 习近平二十大讲话透露可怕目标 王沪宁去留引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019644.md)
 #### [ 二十大今闭幕 中纪委书记将亮相 此人喜上眉梢？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019779.md)
+#### [ 习近平二十大讲话透露可怕目标 王沪宁去留引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019644.md)
 #### [ “临门一脚”怎么踢？胡春华二十大出位表态透端倪(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019723.md)
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 习近平称“虽千万人，吾往矣”分析：透露中共政权不稳(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019714.md)
@@ -16,18 +16,18 @@
 #### [ 二十大新常委“留三进四”?李克强去留成关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849755.md)
 #### [ 传反习图片被公安锁定 中国留学生家人遭警告(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019677.md)
 #### [ 习被冠人民领袖 李克强裸退 习家军全面上位？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103557049.md)
-#### [ 20大常委人选大竞猜 分析：习政权将非常不稳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/664002.md)
 #### [ 二十大闭幕式上 王岐山现身 胡锦涛离场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13850567.md)
+#### [ 20大常委人选大竞猜 分析：习政权将非常不稳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/664002.md)
 #### [ 二十大表忠狂潮下 中共恐惧政权垮台(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019526.md)
-#### [ 王友群：千古罪人王沪宁](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849773.md)
 #### [ 李强成为习近平主导党内地位的风向标](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13850602.md)
+#### [ 王友群：千古罪人王沪宁](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849773.md)
 #### [ 习近平的二十大报告极力掩盖一个天大事实(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019520.md)
 #### [ 二十大中央委员名单出炉 李克强、汪洋消失](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103557146.md)
 #### [ 中共接班人成“高危职业” 习近平连任有原因](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103556484.md)
+#### [ 李克强汪洋未入二十届中央委员 分析：习权力空前](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13850640.md)
 #### [ 党章修订有意外 这五个字或被纳入](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/664389.md)
 #### [ 中共二十大确定中委候选人 台媒抢报政治局名单](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103556740.md)
 #### [ 传广东男大白天当街强奸少女 消息被迅速封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555967.md)
-#### [ 李克强汪洋未入二十届中央委员 分析：习权力空前](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13850640.md)
 #### [ 记者采访二十大规则突变 习近平周日将率新常委亮相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/664260.md)
 #### [ 习近平二十大广西讨论日 惊传桂林检察官避捉黄跳楼 国内封杀(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019657.md)
 #### [ 20大 江泽民未露脸胡锦涛登场 藏玄机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019502.md)
@@ -39,15 +39,15 @@
 #### [ 二十大记者们被套紧箍咒？想见7常委需2天4检(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019749.md)
 #### [ 四通桥被人为发酵？北京天桥、地铁、地下通道统统设岗(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019769.md)
 #### [ 分析：二十大显示中共将朝错误方向跑得更快](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13850376.md)
+#### [ 章天亮: 二十大“入常”名单众说纷纭 谜底到底是什么？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/664224.md)
 #### [ 二十大报告现新提法 专家分析中共最怕什么](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13850152.md)
 #### [ 章天亮: 对二十大结果的分析及给大家的建议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663939.md)
 #### [ 中共20大前人事猜谜 消息来得慢、名单大不同(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019588.md)
-#### [ 章天亮: 二十大“入常”名单众说纷纭 谜底到底是什么？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/664224.md)
 #### [ 二十大闭幕意外一幕 胡锦涛中途被带离场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103557164.md)
 #### [ 【禁闻】新疆内部会议视频流出 泄疫情造假机密](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103556761.md)
 #### [ 白宫拒绝回应关于习近平第三任期的提问](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849649.md)
 #### [ 党媒报导习近平“吾往矣” 网友热议高级黑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849463.md)
+#### [ 习近平主持二十大闭门投票 现场连喊“没有”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103557187.md)
 #### [ 【老北京茶馆】二十大正焦灼 战狼突然闯大祸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13850311.md)
 #### [ 中共为20大封114城 分析：中国人面临残酷未来](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13850268.md)
 #### [ 二十大中国企业家集体失声 与五年前比有三大变化](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103556442.md)
-#### [ 【财商天下】二十大信号：清零开路 计划经济走向2.0](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13850408.md)
